--- a/index.html
+++ b/index.html
@@ -10,33 +10,33 @@
   <body>
     <div class="container text-white">
       <div class="row bg-primary text-right">
-        <div class="col-6 col-sm-6 col-md-3 col-lg-3 border border-Muted">
+        <div class="col-6 col-lg-3 border border-Muted">
           BLOC1
         </div>
-        <div class="col-6 col-sm-6 col-md-3 col-lg-3 border border-Muted">
+        <div class="col-6 col-lg-3 border border-Muted">
           BLOC2
         </div>
-        <div class="col-6 col-sm-6 col-md-3 col-lg-3 border border-Muted">
+        <div class="col-6 col-lg-3 border border-Muted">
           BLOC3
         </div>
-        <div class="col-6 col-sm-6 col-md-3 col-lg-3 border border-Muted">
+        <div class="col-6 col-lg-3 border border-Muted">
           BLOC4
         </div>
       </div>
-      <div class="row bg-warning text-center text-sm-center text-md-left text-lg-left">
-        <div class="col-12 col-sm-12 col-md-3 col-lg-3 border border-Muted">
+      <div class="row bg-warning text-center text-lg-left">
+        <div class="col-12 col-lg-3 border border-Muted">
           BLOC5
         </div>
-        <div class="col-4 col-sm-4 col-md-2 col-lg-2 border border-Muted">
+        <div class="col-4 col-lg-2 border border-Muted">
           BLOC6
         </div>
-        <div class="col-4 col-sm-4 col-md-2 col-lg-2 border border-Muted">
+        <div class="col-4 col-lg-2 border border-Muted">
           BLOC7
         </div>
-        <div class="col-4 col-sm-4 col-md-2 col-lg-2 border border-Muted">
+        <div class="col-4 col-lg-2 border border-Muted">
           BLOC8
         </div>
-        <div class="col-12 col-sm-12 col-md-3 col-lg-3 border border-Muted">
+        <div class="col-12 col-lg-3 border border-Muted">
           BLOC9
         </div>
       </div>
